syntax = "proto3";

package cosmos.accounts.v1;

option go_package = "cosmossdk.io/x/accounts/v1";

import "cosmos/accounts/v1/tx.proto";

// GenesisState defines the accounts' module's genesis state.
message GenesisState {
  // accounts are the genesis accounts.
  repeated GenesisAccount accounts = 1;
  // init_accounts_msgs defines the genesis messages that will be executed to init the account.
  repeated cosmos.accounts.v1.MsgInit init_account_msgs = 2;
}

// GenesisAccount defines an account to be initialized in the genesis state.
message GenesisAccount {
  // address is the address of the account.
  string address = 1;
  // account_type is the account type of the account.
  string account_type = 2;
  // account_number is the account number of the account.
  uint64 account_number = 3;
  // state is the account state represented as a slice of raw key value byte pairs.
  repeated KVPair state = 4;
}

// KVPair defines a key value pair.
message KVPair {
  // key is the key of the pair.
  bytes key = 1;
  // value is the value of the pair.
  bytes value = 2;
}